EDG-1034 review: tidy ChunkBrowser, BatchAttributeSpliterator and AddressSpaceWalker; import instead of package-qualifying in browse tests